--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
-    <title>Home | HiveTown</title>
+    <title>HiveTown</title>
   </head>
   <body>
     <div id="app"></div>
