correcoes adicionar novo endereco para aparecer na mesma pagina em colapse

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     
     <!-- Your custom JavaScript file -->
     <script src="path/to/your/javascript/file.js"></script>
+    <!-- Load Vue.js library -->
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+<!-- Load Bootstrap-Vue library -->
+<script src="https://unpkg.com/bootstrap-vue/dist/bootstrap-vue.js"></script>
+
 
     <title>HiveTown</title>
   </head>
