nao aparecer barra de progresso quando foi cancelada a encomenda, correcoes, adicioes de icons e responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-BhdUjBkE6lRv6IQlUf9E59jr1vj21Dv/wNUWmG8jP97o/lCwzT1lOW2lT8X9N14vxj6HvPavVWgq8/NhFpLJw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-0j1EbJYphkbpygPnzh/s5nLl5J5Ky1+cpVi2G5n0fLD93CmY7MjgZQ8W7fqLbHUNN11zA9jN0xVzEnMVrGr0qw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
     <title>HiveTown</title>
   </head>
   <body>
